# course_project_7

./: .env sample  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  fixtures.json  pyproject.toml  setup.cfg
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_time_to_complete.py  0002_rename_time_habit_time_habit_alter_habit_start_day_and_more.py  0003_alter_habit_start_day.py  0004_alter_habit_start_day.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_date_of_birth_user_phone_and_more.py  0003_alter_user_email.py  0004_user_tg_chat_id.py  0005_alter_user_date_of_birth.py
